# cmake_test

./: CMakeLists.txt
application/: CMakeLists.txt
application/include/: application.h
application/src/: application.cpp
core/: CMakeLists.txt  visualizers.natvis
core/include/: HttpHeader.h  HttpHeaderCollection.h  HttpInterface.h  HttpInterfaceConfigurator.h  HttpMethods.h  HttpRequest.h  HttpResponse.h  Utils.h  WinSock.h  core.h  export.h  types.h
core/src/: HttpHeader.cpp  HttpHeaderCollection.cpp  HttpInterface.cpp  HttpInterfaceConfigurator.cpp  HttpMethods.cpp  HttpRequest.cpp  HttpResponse.cpp  Utils.cpp  WinSock.cpp  core.cpp
server/: CMakeLists.txt
server/include/: Server.h
server/src/: Server.cpp  main.cpp
startup/: CMakeLists.txt
startup/include/: startup.h
startup/src/: startup.cpp
